<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/followTabLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="com.whysurfswim.dakshinapuram.MainActivity">

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/follow_official"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="11dp"
        android:background="@android:color/background_light"
        android:clickable="true"
        android:drawableStart="@drawable/facebook"
        android:focusable="true"
        android:scaleType="center"
        android:text="@string/follow_fb" />

    <Button
        android:id="@+id/twitterButton"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/facebookButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="11dp"
        android:background="@android:color/background_light"
        android:clickable="true"
        android:drawableStart="@drawable/twitter"
        android:focusable="true"
        android:scaleType="center"
        android:text="@string/follow_twitter" />

    <Button
        android:id="@+id/instagramButton"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/twitterButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="11dp"
        android:background="@android:color/background_light"
        android:clickable="true"
        android:drawableStart="@drawable/instagram"
        android:focusable="true"
        android:scaleType="center"
        android:text="@string/follow_instagram" />

    <Button
        android:id="@+id/whatsappButton"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/instagramButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="11dp"
        android:background="@android:color/background_light"
        android:clickable="true"
        android:drawableStart="@drawable/whatsapp"
        android:focusable="true"
        android:scaleType="center"
        android:text="@string/follow_whatsapp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:focusable="true"
        android:theme="@style/AppTheme"
        android:visibility="visible"
        app:adSize="SMART_BANNER"
        app:adUnitId="ca-app-pub-6059528612565667/3631467294" />


</RelativeLayout>