<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactTabLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="com.whysurfswim.dakshinapuram.MainActivity">

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/contact_text"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/mapImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTextView"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/map"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/map" />

    <ScrollView
        android:id="@+id/menuScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mapImageView">

        <LinearLayout
            android:id="@+id/menuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <Button
                android:id="@+id/phoneButton"
                android:layout_width="@android:dimen/thumbnail_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:layout_marginTop="11dp"
                android:background="@android:color/background_light"
                android:clickable="true"
                android:drawableStart="@drawable/ic_phone_forwarded_black_24dp"
                android:focusable="true"
                android:paddingEnd="11dp"
                android:paddingStart="11dp"
                android:scaleType="center"
                android:text="@string/call_text" />

            <Button
                android:id="@+id/mailButton"
                android:layout_width="@android:dimen/thumbnail_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:layout_marginTop="11dp"
                android:background="@android:color/background_light"
                android:clickable="true"
                android:drawableStart="@drawable/ic_contact_mail_black_24dp"
                android:focusable="true"
                android:paddingEnd="11dp"
                android:paddingStart="11dp"
                android:scaleType="center"
                android:text="@string/mail_text" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:focusable="true"
        android:theme="@style/AppTheme"
        android:visibility="visible"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-6059528612565667/3631467294" />

</RelativeLayout>