<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="com.whysurfswim.dakshinapuram.MainActivity">

    <ImageView
        android:id="@+id/dakshinapuramImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/dakshinapuram_name"
        android:scaleType="center"
        app:srcCompat="@drawable/dakshinapuram_logo" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/loadingScreenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/shyamsImageView"
        android:layout_centerHorizontal="true"
        android:text="@string/loading_screen_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/shyamsImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp"
        android:contentDescription="@string/shyams_name"
        android:scaleType="center"
        app:srcCompat="@drawable/shyams_hospitality_logo" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/background_light"
        android:theme="@style/AppTheme"
        android:visibility="invisible" />

</RelativeLayout>
